update version managment and add amqp